# bucket_engine

./: .gitignore  .gitmodules  Makefile.am  Makefile.mingw  README  README.markdown  autogen.sh  bucket_engine.c  bucket_engine.h  bucket_engine.spec  bucket_engine_internal.h  config_parser.h  configure.ac  example.lua  ext.lua  genhash.c  genhash.h  mock_engine.c  null_engine.c  python_wrapper.in  testapp.c  topkeys.c  topkeys.h  util.c  util.h
debian/: README.Debian  changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  init.d.lsb.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  memcached-bucket-engine.default.ex  memcached-bucket-engine.doc-base.EX  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
docs/: engine-params.org
m4/: couchbase.m4  lib-prefix.m4  pandora_64bit.m4  pandora_canonical.m4  pandora_ensure_gcc_version.m4  pandora_have_better_malloc.m4  pandora_have_libdrizzle.m4  pandora_have_libmemcached.m4  pandora_have_libpq.m4  pandora_have_protobuf.m4  pandora_header_assert.m4  pandora_optimize.m4  pandora_platform.m4  pandora_print_callstack.m4  pandora_pthread.m4  pandora_python3_devel.m4  pandora_shared_ptr.m4  pandora_swig.m4  pandora_use_pipe.m4  pandora_vc_build.m4  pandora_visibility.m4  pandora_warnings.m4  pandora_with_lua.m4  pandora_with_memcached.m4  pandora_with_perl.m4  pandora_with_php.m4  pandora_with_python.m4  pandora_with_python3.m4  pandora_with_r.m4  pandora_with_ruby.m4
management/: bucket_tool  bucket_tool.c  collectd.py  collectd_memcached_buckets.py  create_bucket.py  delete_bucket.py  list_buckets.py  mc_bin_client.py  memcacheConstants.py  python_wrapper.in  types.db
win32/: Makefile.mingw  config.h  defs.c  dlfcn.c  dlfcn.h  ntservice.c  win32.h  win32_devnotes.txt
win32/include/arpa/: inet.h
